Shorter notebook tests

--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -58,39 +58,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pytorch-symbolic\n",
-      "  Downloading pytorch-symbolic-0.7.3.tar.gz (17 kB)\n",
-      "  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: torchvision in /home/smikler/miniconda3/lib/python3.9/site-packages (0.13.1)\n",
+      "Requirement already satisfied: pytorch-symbolic in /home/smikler/miniconda3/lib/python3.9/site-packages (0.7.4)\n",
+      "Requirement already satisfied: torchvision in /home/smikler/miniconda3/lib/python3.9/site-packages (0.13.1)\n",
       "Requirement already satisfied: networkx in /home/smikler/miniconda3/lib/python3.9/site-packages (2.8.7)\n",
       "Requirement already satisfied: matplotlib in /home/smikler/miniconda3/lib/python3.9/site-packages (3.5.1)\n",
       "Requirement already satisfied: scipy in /home/smikler/miniconda3/lib/python3.9/site-packages (1.9.3)\n",
       "Requirement already satisfied: tqdm in /home/smikler/miniconda3/lib/python3.9/site-packages (4.64.0)\n",
       "Requirement already satisfied: torch>=1.12.0 in /home/smikler/miniconda3/lib/python3.9/site-packages (from pytorch-symbolic) (1.12.1+cu116)\n",
-      "Requirement already satisfied: numpy in /home/smikler/miniconda3/lib/python3.9/site-packages (from torchvision) (1.23.1)\n",
-      "Requirement already satisfied: requests in /home/smikler/miniconda3/lib/python3.9/site-packages (from torchvision) (2.28.1)\n",
       "Requirement already satisfied: typing-extensions in /home/smikler/miniconda3/lib/python3.9/site-packages (from torchvision) (4.3.0)\n",
+      "Requirement already satisfied: numpy in /home/smikler/miniconda3/lib/python3.9/site-packages (from torchvision) (1.23.1)\n",
       "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /home/smikler/miniconda3/lib/python3.9/site-packages (from torchvision) (9.2.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/smikler/miniconda3/lib/python3.9/site-packages (from matplotlib) (0.11.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/smikler/miniconda3/lib/python3.9/site-packages (from matplotlib) (4.25.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/smikler/miniconda3/lib/python3.9/site-packages (from matplotlib) (1.4.2)\n",
+      "Requirement already satisfied: requests in /home/smikler/miniconda3/lib/python3.9/site-packages (from torchvision) (2.28.1)\n",
       "Requirement already satisfied: packaging>=20.0 in /home/smikler/miniconda3/lib/python3.9/site-packages (from matplotlib) (21.3)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in /home/smikler/miniconda3/lib/python3.9/site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/smikler/miniconda3/lib/python3.9/site-packages (from matplotlib) (4.25.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/smikler/miniconda3/lib/python3.9/site-packages (from matplotlib) (1.4.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/smikler/miniconda3/lib/python3.9/site-packages (from matplotlib) (0.11.0)\n",
       "Requirement already satisfied: pyparsing>=2.2.1 in /home/smikler/miniconda3/lib/python3.9/site-packages (from matplotlib) (3.0.9)\n",
       "Requirement already satisfied: six>=1.5 in /home/smikler/miniconda3/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
-      "Requirement already satisfied: charset-normalizer<3,>=2 in /home/smikler/miniconda3/lib/python3.9/site-packages (from requests->torchvision) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/smikler/miniconda3/lib/python3.9/site-packages (from requests->torchvision) (3.3)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/smikler/miniconda3/lib/python3.9/site-packages (from requests->torchvision) (1.26.11)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /home/smikler/miniconda3/lib/python3.9/site-packages (from requests->torchvision) (2022.9.14)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /home/smikler/miniconda3/lib/python3.9/site-packages (from requests->torchvision) (3.3)\n",
-      "Building wheels for collected packages: pytorch-symbolic\n",
-      "  Building wheel for pytorch-symbolic (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for pytorch-symbolic: filename=pytorch_symbolic-0.7.3-py3-none-any.whl size=19109 sha256=77eb1f81334c9826dc23786fa2d877ed1ca1f51b0b4e53d5d519608b6c2c5478\n",
-      "  Stored in directory: /home/smikler/.cache/pip/wheels/6e/11/ad/859b00f8df5138cdf89391d5e6d1331d394bf6cb952fd09fab\n",
-      "Successfully built pytorch-symbolic\n",
-      "Installing collected packages: pytorch-symbolic\n",
-      "Successfully installed pytorch-symbolic-0.7.3\n"
+      "Requirement already satisfied: charset-normalizer<3,>=2 in /home/smikler/miniconda3/lib/python3.9/site-packages (from requests->torchvision) (2.0.4)\n"
      ]
     }
    ],
@@ -152,13 +141,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x=<SymbolicTensor at 0x7fb652aefaf0; child of 0; parent of 0>\n",
-      "y=<SymbolicTensor at 0x7fb6f8773ca0; child of 0; parent of 0>\n",
+      "x=<SymbolicTensor at 0x7f7b0ab032b0; child of 0; parent of 0>\n",
+      "y=<SymbolicTensor at 0x7f7b0ab03310; child of 0; parent of 0>\n",
       "\n",
       "After creating z = x + y:\n",
-      "x=<SymbolicTensor at 0x7fb652aefaf0; child of 0; parent of 1>\n",
-      "y=<SymbolicTensor at 0x7fb6f8773ca0; child of 0; parent of 1>\n",
-      "z=<SymbolicTensor at 0x7fb652aef9d0; child of 2; parent of 0>\n"
+      "x=<SymbolicTensor at 0x7f7b0ab032b0; child of 0; parent of 1>\n",
+      "y=<SymbolicTensor at 0x7f7b0ab03310; child of 0; parent of 1>\n",
+      "z=<SymbolicTensor at 0x7f7bb37c6700; child of 2; parent of 0>\n"
      ]
     }
    ],
@@ -211,9 +200,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x.children=[<SymbolicTensor at 0x7fb652aef9d0; child of 2; parent of 0>]\n",
-      "y.children=[<SymbolicTensor at 0x7fb652aef9d0; child of 2; parent of 0>]\n",
-      "z.parents=(<SymbolicTensor at 0x7fb652aefaf0; child of 0; parent of 1>, <SymbolicTensor at 0x7fb6f8773ca0; child of 0; parent of 1>)\n"
+      "x.children=[<SymbolicTensor at 0x7f7bb37c6700; child of 2; parent of 0>]\n",
+      "y.children=[<SymbolicTensor at 0x7f7bb37c6700; child of 2; parent of 0>]\n",
+      "z.parents=(<SymbolicTensor at 0x7f7b0ab032b0; child of 0; parent of 1>, <SymbolicTensor at 0x7f7b0ab03310; child of 0; parent of 1>)\n"
      ]
     }
    ],
@@ -347,9 +336,9 @@
     {
      "data": {
       "text/plain": [
-       "[<SymbolicTensor at 0x7fb628a2a940; child of 2; parent of 1>,\n",
-       " <SymbolicTensor at 0x7fb62895b8b0; child of 2; parent of 1>,\n",
-       " <SymbolicTensor at 0x7fb652a8e8b0; child of 2; parent of 1>]"
+       "[<SymbolicTensor at 0x7f7b0aacd610; child of 2; parent of 1>,\n",
+       " <SymbolicTensor at 0x7f7ae0991d90; child of 2; parent of 1>,\n",
+       " <SymbolicTensor at 0x7f7b0ab03e80; child of 2; parent of 1>]"
       ]
      },
      "execution_count": 7,
@@ -468,9 +457,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rx=tensor([0.5663])\n",
-      "ry=tensor([0.5923])\n",
-      "model(rx, ry)=tensor([0.4893])\n"
+      "rx=tensor([0.8235])\n",
+      "ry=tensor([0.8918])\n",
+      "model(rx, ry)=tensor([0.7938])\n"
      ]
     }
    ],
@@ -798,9 +787,45 @@
     }
    },
    "source": [
-    "We can operate on subgraphs too: we can either create models from them or just draw them.\n",
+    "We don't need to use all the created nodes. We can use just a subset of them: a subgraph.\n",
+    "In fact, your models can take arbitrary `SymbolicTensor` as input.\n",
     "\n",
-    "Let's use previous graph as an example.\n",
+    "One thing that is forbidden is using incomplete inputs. It is when a node depends on a node that is not in its subgraph, for example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Node <SymbolicTensor at 0x7f7b071ceee0; child of 2; parent of 0> depends on the output of a foreign node! Perhaps you set the wrong inputs?\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = Input((1,))\n",
+    "b = Input((1,))\n",
+    "c = a + b\n",
+    "\n",
+    "try:\n",
+    "    SymbolicModel(inputs=(a,), outputs=(c,))\n",
+    "except AssertionError as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "Let's use previous graph as an example for using subgraphs to create new models.\n",
     "\n",
     "Let's say we want a new model that shares weights with the existing one.\n",
     "We want to omit the tower 1 and tower 3 computations, instead we'll provide their values \"by hand\" somehow."
@@ -873,9 +898,9 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([[-0.0156, -0.2274,  0.0774, -0.1926, -0.2896]],\n",
+       "(tensor([[ 0.0703, -0.0050, -0.0800, -0.4779,  0.1192]],\n",
        "        grad_fn=<AddmmBackward0>),\n",
-       " tensor([[-0.2150,  0.0240,  0.0223]], grad_fn=<AddmmBackward0>))"
+       " tensor([[ 0.0122, -0.0047, -0.4107]], grad_fn=<AddmmBackward0>))"
       ]
      },
      "execution_count": 17,
@@ -912,9 +937,9 @@
    "source": [
     "Let us create and train a small ResNet example that will work on MNIST dataset.\n",
     "\n",
-    "To train the model quickly, you need to have CUDA capable device.\n",
+    "To train the model quickly, you need to have CUDA capable device. On Colab, be sure to set \"Hardware accelerator\" to \"GPU\".\n",
     "\n",
-    "On Colab, be sure to set \"Hardware accelerator\" to \"GPU\"."
+    "In this notebook, if CUDA is not detected, we'll use a smaller neural network and a shorter training."
    ]
   },
   {
@@ -946,110 +971,7 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to ./MNIST/raw/train-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5021dbabcb84d00ac2f0e2df523c586",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/9912422 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./MNIST/raw/train-images-idx3-ubyte.gz to ./MNIST/raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to ./MNIST/raw/train-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb7189a5a3ba4ea1a59229e489a6b7cf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/28881 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./MNIST/raw/train-labels-idx1-ubyte.gz to ./MNIST/raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to ./MNIST/raw/t10k-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c4eaa603e7344aa8994f0ae82aaf9e0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1648877 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./MNIST/raw/t10k-images-idx3-ubyte.gz to ./MNIST/raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to ./MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05c0a8c214e64b7ab58a7cc796427009",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/4542 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./MNIST/raw/t10k-labels-idx1-ubyte.gz to ./MNIST/raw\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Creating dataset\n",
     "\n",
@@ -1078,7 +1000,7 @@
    },
    "outputs": [],
    "source": [
-    "def create_model():\n",
+    "def create_model_gpu():\n",
     "    def shortcut_func(x, channels, stride):\n",
     "        if x.channels != channels or stride != 1:\n",
     "            return x(nn.Conv2d(x.channels, channels, kernel_size=1, bias=False, stride=stride))\n",
@@ -1106,7 +1028,39 @@
     "    return inputs, outs\n",
     "\n",
     "\n",
-    "inputs, outputs = create_model()\n",
+    "def create_model_cpu():\n",
+    "    def shortcut_func(x, channels, stride):\n",
+    "        if x.channels != channels or stride != 1:\n",
+    "            return x(nn.Conv2d(x.channels, channels, kernel_size=1, bias=False, stride=stride))\n",
+    "        else:\n",
+    "            return nn.Identity()(x)\n",
+    "\n",
+    "    inputs = Input(batch_shape=(100, 1, 28, 28))\n",
+    "    flow = inputs(nn.Conv2d(inputs.channels, 4, 3, padding=1))\n",
+    "\n",
+    "    for group_size, width, stride in [(2, 4, 2), (2, 16, 2), (2, 32, 2)]:\n",
+    "        for _ in range(group_size):\n",
+    "            shortcut = shortcut_func(flow, width, stride)\n",
+    "\n",
+    "            flow = nn.BatchNorm2d(flow.channels)(flow)(nn.ReLU())\n",
+    "            flow = nn.Conv2d(flow.channels, width, 3, stride, 1)(flow)\n",
+    "            flow = nn.BatchNorm2d(flow.channels)(flow)(nn.ReLU())\n",
+    "            flow = nn.Conv2d(flow.channels, width, 3, 1, 1)(flow)\n",
+    "\n",
+    "            flow = flow + shortcut\n",
+    "            stride = 1\n",
+    "\n",
+    "    flow = nn.BatchNorm2d(flow.channels)(flow)(nn.ReLU())\n",
+    "    flow = nn.MaxPool2d(kernel_size=flow.HW)(flow)(nn.Flatten())\n",
+    "    outs = nn.Linear(flow.features, 10)(flow)\n",
+    "    return inputs, outs\n",
+    "\n",
+    "\n",
+    "if device.type == \"cuda\":\n",
+    "    inputs, outputs = create_model_gpu()\n",
+    "else:\n",
+    "    inputs, outputs = create_model_cpu()\n",
+    "\n",
     "model = SymbolicModel(inputs=inputs, outputs=outputs).to(device)\n",
     "optimizer = torch.optim.Adam(model.parameters())"
    ]
@@ -1169,7 +1123,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59203d16e06d425fa366356f59eb1883",
+       "model_id": "0761f56fab48495da3c8a257dd5750c5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1184,11 +1138,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average training accuracy in epoch 1: 94.966%\n",
-      "Average training accuracy in epoch 2: 98.964%\n",
-      "Average training accuracy in epoch 3: 99.226%\n",
-      "Average training accuracy in epoch 4: 99.352%\n",
-      "Average training accuracy in epoch 5: 99.564%\n"
+      "Average training accuracy in epoch 1: 95.136%\n",
+      "Average training accuracy in epoch 2: 98.926%\n",
+      "Average training accuracy in epoch 3: 99.086%\n",
+      "Average training accuracy in epoch 4: 99.324%\n",
+      "Average training accuracy in epoch 5: 99.426%\n"
      ]
     }
    ],
@@ -1220,7 +1174,7 @@
     "        print(f\"Average training accuracy in epoch {epoch + 1}: {mean_acc / mean_acc_n * 100 : <6.3f}%\")\n",
     "\n",
     "\n",
-    "traininig(model, optimizer, epochs=5)"
+    "traininig(model, optimizer, epochs=5 if device.type == \"cuda\" else 2)"
    ]
   },
   {
@@ -1240,7 +1194,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average validation accuracy: 98.910%\n"
+      "Average validation accuracy: 98.430%\n"
      ]
     }
    ],
@@ -1317,7 +1271,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e7535ce8e5c443b87c8750b9f7ed2cb",
+       "model_id": "0b61b666e73b494f8977c7b9bbfe11fb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1332,18 +1286,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average training accuracy in epoch 1: 95.302%\n",
-      "Average training accuracy in epoch 2: 98.926%\n",
-      "Average training accuracy in epoch 3: 99.248%\n",
-      "Average training accuracy in epoch 4: 99.450%\n",
-      "Average training accuracy in epoch 5: 99.468%\n",
-      "Average validation accuracy: 98.900%\n"
+      "Average training accuracy in epoch 1: 95.120%\n",
+      "Average training accuracy in epoch 2: 98.960%\n",
+      "Average training accuracy in epoch 3: 99.244%\n",
+      "Average training accuracy in epoch 4: 99.366%\n",
+      "Average training accuracy in epoch 5: 99.526%\n",
+      "Average validation accuracy: 99.310%\n"
      ]
     }
    ],
    "source": [
     "if torch.cuda.is_available():\n",
-    "    inputs, outputs = create_model()\n",
+    "    inputs, outputs = create_model_gpu()\n",
     "    model = SymbolicModel(inputs=inputs, outputs=outputs, enable_cuda_graphs=True)\n",
     "    optimizer = torch.optim.Adam(model.parameters())\n",
     "\n",
@@ -1391,7 +1345,7 @@
    },
    "outputs": [],
    "source": [
-    "from pytorch_symbolic import config, add_to_model\n",
+    "from pytorch_symbolic import config, add_to_graph\n",
     "\n",
     "config.CODEGEN_MIN_LOOP_LENGTH = 2"
    ]
@@ -1437,7 +1391,7 @@
     "x22 = nn.Conv2d(x21.C, 16, 3, padding=1)(x21)\n",
     "x23 = nn.Conv2d(x22.C, 16, 3, padding=1)(x22)\n",
     "\n",
-    "x5 = add_to_model(torch.concat, [x15, x23], dim=1)\n",
+    "x5 = add_to_graph(torch.concat, [x15, x23], dim=1)\n",
     "x6 = nn.Flatten()(x5)\n",
     "x7 = nn.Linear(x6.features, 1)(x6)\n",
     "\n",
@@ -1457,7 +1411,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "def _generated_forward(self,i00):\n",
+      "def forward(self,i00):\n",
       "    l = self._execution_order_layers\n",
       "    h02 = i00\n",
       "    for layer in l[0:3]:\n",
