--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -1100,7 +1100,13 @@
     }
    ],
    "source": [
-    "graph_algorithms.draw_graph(    model=model, edge_text_func=lambda x: \"\", node_text_namespace=globals(), rotate_graph=True, figsize=(35, 4),);"
+    "graph_algorithms.draw_graph(\n",
+    "    model=model,\n",
+    "    edge_text_func=lambda x: \"\",\n",
+    "    node_text_namespace=globals(),\n",
+    "    rotate_graph=True,\n",
+    "    figsize=(35, 4),\n",
+    ");"
    ]
   },
   {
