--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -428,10 +428,10 @@
        "  (module0_depth1): MulOpLayer()\n",
        "  (module1_depth1): SubOpLayer()\n",
        "  (module2_depth1): AddOpLayer()\n",
-       "  (module3_depth2): AnyOpLayer()\n",
+       "  (module3_depth2): LambdaOpLayer()\n",
        "  (module4_depth3): AddOpLayer()\n",
        "  (module5_depth4): AddOpLayer()\n",
-       "  (module6_depth5): AnyOpLayer()\n",
+       "  (module6_depth5): LambdaOpLayer()\n",
        ")"
       ]
      },
