--- a/gentle-introduction.ipynb
+++ b/gentle-introduction.ipynb
@@ -22,23 +22,14 @@
     "You don't need any knowledge of the inner workings of Pytorch Symbolic to use it.\n",
     "In most cases, after seeing a few examples, you're good to go.\n",
     "If you used Keras Symbolic API before, you don't even need any learning materials.\n",
-    "However, this notebooks explains Pytorch Symbolic a little bit deeper, in case you just want to know more stuff."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
+    "However, this notebooks explains Pytorch Symbolic a little bit deeper, in case you just want to know more stuff.\n",
+    "\n",
     "In this notebook, we'll use our built-in drawing solution for layered graphs.\n",
     "Although it's not ideal, we hope it'll be just enough to demonstrate the concepts.\n",
     "\n",
-    "You can use it yourself if you have an optional dependency are installed: `networkx`. It can be installed with `pip install networkx`.\n",
+    "You can use it yourself if you have an optional dependencies are installed: `networkx`, `matplotlib`, `scipy`. They can be installed with `pip install pytorch-symbolic[full]`.\n",
     "\n",
-    "You can find the reference [in the Documentation](https://pytorch-symbolic.readthedocs.io/)."
+    "* [Link to Documentation](https://pytorch-symbolic.readthedocs.io/en/latest/quick_start/)"
    ]
   },
   {
@@ -511,7 +502,7 @@
     "\n",
     "Most of Python's operators are already defined for Symbolic Tensors, e.g.: `+, -, *, /, //, %, abs`.\n",
     "\n",
-    "They will be converted to ``nn.Module`` and registered correctly in the model."
+    "They will be converted to ``torch.nn.Module`` and registered correctly in the model."
    ]
   },
   {
