--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -98,13 +98,11 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from torch import nn\n",
-    "from pytorch_symbolic import SymbolicModel, Input, useful_layers, graph_algorithms\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "import torchvision\n",
-    "from tqdm.notebook import tqdm"
+    "from torch import nn\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "from pytorch_symbolic import Input, SymbolicModel, graph_algorithms, useful_layers"
    ]
   },
   {
@@ -1264,7 +1262,7 @@
     "    mean_acc = 0\n",
     "    mean_acc_n = 0\n",
     "\n",
-    "    loss_fn = nn.CrossEntropyLoss()\n",
+    "    nn.CrossEntropyLoss()\n",
     "\n",
     "    with torch.no_grad():\n",
     "        for x, y in valid_dl:\n",
@@ -1404,7 +1402,7 @@
    },
    "outputs": [],
    "source": [
-    "from pytorch_symbolic import config, add_to_graph\n",
+    "from pytorch_symbolic import add_to_graph, config\n",
     "\n",
     "config.CODEGEN_MIN_LOOP_LENGTH = 2"
    ]
